OAK-389-firmware-update: fix letter spacing

--- a/oak-app/src/components/app-home/app-home.component.scss
+++ b/oak-app/src/components/app-home/app-home.component.scss
@@ -48,7 +48,8 @@
   .device-info--label {
     @include atlas-medium($color-brand-lf-text-gray-dark, 1em);
     text-transform: uppercase;
-    margin-bottom: 0.8rem;
+    letter-spacing: 2px;
+    margin-bottom: 0.5rem;
   }
 
   .device-info--value {
